test/Fail/Issue1145b.err
Issue1145b.agda:7.11: error: [ParseError]
:<ERROR>  Set          -- Bad, should f...
